--- a/css/main.css
+++ b/css/main.css
@@ -276,9 +276,9 @@ img {
 }
 
 @media only screen and (max-width: 768px){
-  .header__menu-button {
+  .header__menu-button{
     display: block;
-    z-index: 101px;
+    z-index: 101;
   }
   
   .header__menu-button span:nth-child(2){
@@ -304,7 +304,7 @@ img {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 100%;
+    z-index: 100;
     width: 100%;
     height: 100%;
     display: block;
@@ -1387,7 +1387,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: -15;
+  margin: 15px;
   padding: 0;
   list-style-type: none;
 }
@@ -1476,7 +1476,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: -8;
+  margin: 8px;
   padding: 0;
   list-style-type: none;
 }
@@ -1971,7 +1971,7 @@ img {
   transform: rotate(90deg);
 }
 
-/* Services section */
+/* Services open section */
 
 .services-hero {
   padding-top: 118px;
@@ -2330,6 +2330,7 @@ img {
   background-color: #000;
   padding: 15px 50px;
   width: 225px;
+  cursor: pointer;
 }
 
 /* Blog section */
@@ -2580,6 +2581,7 @@ img {
   color: #fff;
   text-align: center;
   width: 200px;
+  cursor: pointer;
 }
 
 .blog-grid__button::before {
